--- a/app/views/forum_threads/index.html.erb
+++ b/app/views/forum_threads/index.html.erb
@@ -1,62 +1,129 @@
 <%= render "forum/forum_header", forum_topic: @forum_topic, active: :thread %>
 
-<div class="row">
-  <div class="small-12 columns">
-    <%= link_to 'Neuen Beitrag erstellen', '#', class: 'button' %>
+<div class="flex flex-col gap-6">
+  <%# Top Actions and Pagination %>
+  <div class="flex flex-col sm:flex-row justify-between items-center gap-4">
+    <%= link_to '#', class: 'btn btn-primary w-full sm:w-auto' do %>
+      <i class="fas fa-plus mr-2"></i> Neues Thema erstellen
+    <% end %>
+    
+    <% if @pagy.pages > 1 %>
+      <div class="w-full sm:w-auto overflow-x-auto py-2">
+        <%== @pagy.series_nav %>
+      </div>
+    <% end %>
   </div>
-</div>
 
-<div class="row">
-  <div class="small-12 columns">
-    <%== @pagy.series_nav if @pagy.pages > 1 %>
-  </div>
-</div>
-
-<div class="row">
-  <div class="small-12 columns">
-    <table>
-      <tr>
-        <th>&nbsp;</th>
-        <th>Aufrufe</th>
-        <th>Beiträge</th>
-        <th>Letzter Beitrag</th>
-      </tr>
-
+  <%# Thread List %>
+  <div class="space-y-4">
+    <%# Mobile View (Cards) - Shown on mobile up to lg, hidden larger %>
+    <div class="lg:hidden space-y-3">
       <% @forum_threads.each do |forum_thread| %>
-        <tr>
-          <td class="<%= 'unread-forum-thread' if (current_user && forum_thread.last_post_created_at && forum_thread.last_post_created_at > (1.week.ago) && !forum_thread.read_by?(current_user)) %>">
-            <%= link_to forum_thread.title, link_to_forum_thread(forum_thread) %>
-          </td>
-          <td>
-            <%= link_to forum_thread.views, link_to_forum_thread(forum_thread) %>
-          </td>
-          <td>
-            <%= link_to forum_thread.count_posts, link_to_forum_thread(forum_thread) %>
-          </td>
-          <td>
+        <% is_unread = current_user && forum_thread.last_post_created_at && forum_thread.last_post_created_at > (1.week.ago) && !forum_thread.read_by?(current_user) %>
+        <div class="card">
+          <div class="card-body p-4">
+            <div class="flex items-start gap-3">
+               <div class="<%= is_unread ? 'unread-indicator text-cs-dark-red' : 'text-gray-300' %> mt-1">
+                 <i class="fas <%= forum_thread.sticky ? 'fa-thumbtack' : 'fa-comment' %> text-lg"></i>
+               </div>
+               <div class="flex-1 min-w-0">
+                  <h3 class="text-base font-bold leading-tight mb-1">
+                    <%= link_to forum_thread.title, link_to_forum_thread(forum_thread), class: "link hover:underline break-words" %>
+                  </h3>
+                  <div class="text-xs text-gray-500 flex flex-wrap gap-x-4 gap-y-1">
+                    <span>Von <%= forum_thread.user&.username || 'Unbekannt' %></span>
+                    <span><i class="far fa-eye mr-1"></i> <%= forum_thread.views %></span>
+                    <span><i class="far fa-comments mr-1"></i> <%= forum_thread.count_posts %></span>
+                  </div>
+               </div>
+            </div>
+
             <% if forum_thread.last_post_user %>
-              <div>
-                <%= user_badge(forum_thread.last_post_user) %>
-              </div>
-              <div>
-                <%= time_ago_in_words(forum_thread.last_post_created_at, include_seconds: true) %>
+              <div class="mt-3 pt-3 border-t border-gray-100 flex items-center justify-between text-[10px] text-gray-400 uppercase tracking-wider">
+                <div class="flex items-center gap-1">
+                  <span>Letzter von</span>
+                  <%= user_badge(forum_thread.last_post_user) %>
+                </div>
+                <span><%= time_ago_in_words(forum_thread.last_post_created_at) %></span>
               </div>
             <% end %>
-          </td>
-        </tr>
+          </div>
+        </div>
       <% end %>
-    </table>
-  </div>
-</div>
+    </div>
 
-<div class="row">
-  <div class="small-12 columns">
-    <%== @pagy.series_nav if @pagy.pages > 1 %>
+    <%# Desktop View (Table) - Hidden on mobile/tablet, shown on lg and up %>
+    <div class="hidden lg:block table-container">
+      <table class="table-standard">
+        <thead>
+          <tr>
+            <th class="table-th w-auto">Thema</th>
+            <th class="table-th text-center w-24">Aufrufe</th>
+            <th class="table-th text-center w-24">Beiträge</th>
+            <th class="table-th w-56">Letzter Beitrag</th>
+          </tr>
+        </thead>
+        <tbody class="divide-y divide-gray-200">
+          <% @forum_threads.each do |forum_thread| %>
+            <% is_unread = current_user && forum_thread.last_post_created_at && forum_thread.last_post_created_at > (1.week.ago) && !forum_thread.read_by?(current_user) %>
+            <tr class="table-tr-hover">
+              <td class="table-td">
+                <div class="flex items-center gap-4">
+                  <div class="<%= is_unread ? 'unread-indicator text-cs-dark-red' : 'text-gray-300' %> w-8 flex justify-center">
+                    <% if forum_thread.sticky %>
+                      <i class="fas fa-thumbtack text-lg" title="Sticky"></i>
+                    <% elsif forum_thread.locked %>
+                      <i class="fas fa-lock text-lg" title="Gesperrt"></i>
+                    <% else %>
+                      <i class="fas fa-comment text-lg"></i>
+                    <% end %>
+                  </div>
+                  <div class="min-w-0">
+                    <%= link_to forum_thread.title, link_to_forum_thread(forum_thread), class: "link font-bold hover:underline block truncate max-w-md", title: forum_thread.title %>
+                    <div class="text-xs text-gray-500 mt-0.5">
+                      Erstellt von <%= forum_thread.user&.username || 'Unbekannt' %> • <%= forum_thread.created_at.strftime("%d.%m.%Y") %>
+                    </div>
+                  </div>
+                </div>
+              </td>
+              <td class="table-td text-center text-gray-600 font-medium">
+                <%= forum_thread.views %>
+              </td>
+              <td class="table-td text-center text-gray-600 font-medium">
+                <%= forum_thread.count_posts %>
+              </td>
+              <td class="table-td">
+                <% if forum_thread.last_post_user %>
+                  <div class="flex flex-col gap-1 text-sm">
+                    <div class="flex items-center gap-2">
+                      <%= user_badge(forum_thread.last_post_user) %>
+                    </div>
+                    <div class="text-gray-500 text-xs">
+                      <i class="far fa-clock mr-1"></i> <%= time_ago_in_words(forum_thread.last_post_created_at) %>
+                    </div>
+                  </div>
+                <% else %>
+                  <span class="text-gray-400 text-sm italic">Keine Beiträge</span>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
-</div>
 
-<div class="row">
-  <div class="small-12 columns">
-    <%= link_to 'Neuen Beitrag erstellen', '#', class: 'button' %>
+  <%# Bottom Pagination %>
+  <% if @pagy.pages > 1 %>
+    <div class="flex justify-center mt-4">
+      <%== @pagy.series_nav %>
+    </div>
+  <% end %>
+
+  <%# Bottom Action %>
+  <div class="flex justify-center sm:justify-start">
+    <%= link_to '#', class: 'btn btn-outline w-full sm:w-auto' do %>
+      <i class="fas fa-plus mr-2"></i> Neues Thema erstellen
+    <% end %>
   </div>
 </div>
