--- a/app/views/forum_posts/_forum_post.html.erb
+++ b/app/views/forum_posts/_forum_post.html.erb
@@ -29,7 +29,7 @@
     <%# Post Body %>
     <div class="flex-1 p-4 lg:p-6 min-w-0 flex flex-col">
       <div class="prose prose-sm max-w-none text-gray-800 flex-1">
-        <%= simple_format(sanitize(forum_post.body)) %>
+        <%= render_bbcode(forum_post.body) %>
       </div>
 
       <% if forum_post.last_editor %>
