--- a/app/views/forum_threads/index.html.erb
+++ b/app/views/forum_threads/index.html.erb
@@ -3,7 +3,7 @@
 <div class="flex flex-col gap-6">
   <%# Top Actions and Pagination %>
   <div class="flex flex-col sm:flex-row justify-between items-center gap-4">
-    <%= link_to '#', class: 'btn btn-primary w-full sm:w-auto' do %>
+    <%= link_to new_forum_thread_path(@forum_topic), class: 'btn btn-primary w-full sm:w-auto' do %>
       <i class="fas fa-plus mr-2"></i> Neues Thema erstellen
     <% end %>
     
@@ -122,7 +122,7 @@
 
   <%# Bottom Action %>
   <div class="flex justify-center sm:justify-start">
-    <%= link_to '#', class: 'btn btn-outline w-full sm:w-auto' do %>
+    <%= link_to new_forum_thread_path(@forum_topic), class: 'btn btn-outline w-full sm:w-auto' do %>
       <i class="fas fa-plus mr-2"></i> Neues Thema erstellen
     <% end %>
   </div>
