--- a/app/views/forum_posts/_forum_post.html.erb
+++ b/app/views/forum_posts/_forum_post.html.erb
@@ -39,12 +39,20 @@
       <% end %>
 
       <%# Post Actions %>
-      <div class="mt-6 flex justify-end gap-2">
-        <% if Current.user && (forum_post.user == Current.user || Current.user.admin? || Current.user.try(:forum_moderator?)) %>
-          <%= link_to edit_forum_post_path(forum_post), class: 'btn btn-sm btn-outline' do %>
-            <i class="fas fa-edit mr-1"></i> Bearbeiten
+      <div class="mt-6 flex justify-between items-center pt-4 border-t border-gray-100">
+        <div class="flex gap-3">
+          <% if Current.user && (forum_post.user == Current.user || Current.user.admin? || Current.user.try(:forum_moderator?)) %>
+            <%= link_to edit_forum_post_path(forum_post), class: 'text-gray-400 hover:text-cs-gold transition-colors', title: "Bearbeiten" do %>
+              <i class="fas fa-pencil-alt"></i>
+            <% end %>
           <% end %>
-        <% end %>
+
+          <% if Current.user && (Current.user.admin? || Current.user.try(:forum_moderator?)) %>
+            <%= button_to forum_post_path(forum_post), method: :delete, onclick: "return confirm('Möchten Sie diesen Beitrag wirklich löschen?')", class: 'text-gray-400 hover:text-cs-error transition-colors cursor-pointer', title: "Löschen" do %>
+              <i class="fas fa-trash"></i>
+            <% end %>
+          <% end %>
+        </div>
         
         <% if Current.user %>
           <%= link_to new_forum_post_path(forum_post.forum_thread, quote: forum_post.id), class: 'btn btn-sm btn-gold' do %>
