--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,14 +40,14 @@
 
       <!-- Right: Desktop Search -->
       <div class="hidden md:block">
-        <div class="relative">
-          <input type="text" placeholder="Suche..." class="bg-white/10 border border-white/20 rounded-full px-4 py-1 text-sm focus:outline-none focus:ring-1 focus:ring-cs-gold placeholder-white/50 w-40 lg:w-auto">
-          <span class="absolute right-3 top-1/2 -translate-y-1/2 text-white/50">
+        <%= form_tag recipes_path, method: :get, class: "relative" do %>
+          <input type="text" name="q" value="<%= params[:q] %>" placeholder="Rezepte suchen..." class="bg-white/10 border border-white/20 rounded-full px-4 py-1 text-sm focus:outline-none focus:ring-1 focus:ring-cs-gold placeholder-white/50 w-40 lg:w-auto">
+          <button type="submit" class="absolute right-3 top-1/2 -translate-y-1/2 text-white/50 hover:text-cs-gold transition-colors">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
               <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
             </svg>
-          </span>
-        </div>
+          </button>
+        <% end %>
       </div>
 
       <!-- Mobile Menu Button -->
@@ -64,14 +64,14 @@
     <div class="container mx-auto px-4 py-4 space-y-4">
       
       <!-- Mobile Search -->
-      <div class="relative">
-        <input type="text" placeholder="Suche..." class="w-full bg-white/10 border border-white/20 rounded-full px-4 py-2 text-base text-white focus:outline-none focus:ring-1 focus:ring-cs-gold placeholder-white/50">
-        <span class="absolute right-3 top-1/2 -translate-y-1/2 text-white/50">
+      <%= form_tag recipes_path, method: :get, class: "relative" do %>
+        <input type="text" name="q" value="<%= params[:q] %>" placeholder="Rezepte suchen..." class="w-full bg-white/10 border border-white/20 rounded-full px-4 py-2 text-base text-white focus:outline-none focus:ring-1 focus:ring-cs-gold placeholder-white/50">
+        <button type="submit" class="absolute right-3 top-1/2 -translate-y-1/2 text-white/50 hover:text-cs-gold transition-colors">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
             <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
           </svg>
-        </span>
-      </div>
+        </button>
+      <% end %>
 
       <!-- Mobile Links -->
       <nav class="flex flex-col space-y-2 text-white text-lg font-medium">
