--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,8 @@
         <%= yield %>
       </div>
 
+      <%= render "layouts/footer" %>
+
       <user-profile-modal></user-profile-modal>
     </div>
   </body>
