Feat: Implement Favorites system and improve Footer layout
Legacy 'user_recipes' are now 'favorites'.

Changes:
- Layout: Fix sticky footer using flexbox and reduce vertical padding.
- Model: Create polymorphic Favorite model with Favoritable concern.
- Migration: Add rake task to import legacy user_recipes (preserving old_id).
- API: Add FavoritesController for async toggling.
- Tests: Add comprehensive model and request specs.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,12 +28,12 @@
   </head>
 
   <body>
-    <div id="app">
+    <div id="app" class="min-h-screen flex flex-col">
       <%= render "layouts/header" %>
 
       <%= render "layouts/flash_messages" %>
 
-      <div class="container mx-auto px-4 py-6">
+      <div class="container mx-auto px-4 py-6 grow">
         <%= yield %>
       </div>
 
